# Velmo2

./: .env.example  .gitignore  00_STACK_GLOBALE.md  01_ARCHITECTURE_OVERVIEW.md  02_INTEGRATION_PLAN.md  ARCHITECTURE.md  DEBRIEF_COMPLET.md  FLOWCHARTS.md  INDEX_CHANTIERS.md  Makefile  README.md  SESSION_DESIGN_CHANTIER1_MEMOIRE.md  brief-phase2-creation-velmo2.md  check_db.py  docker-compose.yml  eval_memory.py  pyproject.toml  velmo_cli.py
.github/workflows/: ci.yml  quality.yml
agent/: agent.py  schema.py
apps/sms_server/: main.py
apps/streamlit/: README.md  app_streamlit.py
business/: __init__.py  generate.py  models.py  repository.py  schema.py  tools.py
chantier-1-memoire/: 01_DESIGN.md  02_SCHEMAS.md  AZURE_KIMI_INTEGRATION.md  EXPLICATIONS.md  LANGSMITH_INTEGRATION.md  README.md
chantier-1.memoire/: 01_design.md  02_schemas.md  03_diagrammes.md  04_decisions.md  05_cas-usage.md  README.md
chantier-1.memoire/diagrams/: architecture.mermaid  (+2 more)
chantier-2-guardrails/: 01_DESIGN.md  02_SCHEMAS.md  03_FLOWCHARTS.md  README.md
chantier-3-evals/: 01_METRICS.md  02_MLOPS.md  README.md
docs/: OPTIMISATIONS_LATENCE.md  README.md  architecture.md  brief-phase2-creation-velmo2.md  demarrage.md
guardrails/: README.md  __init__.py  audit.py  classifier.py  input_guard.py  rules.py
memory/: __init__.py  config.py  database.py  judge.py  long_term.py  manager.py  schema.py  short_term.py
mlops/: report.md  run_eval.py
observability/: tracing.py
scripts/: eval_guardrails.py  eval_memory.py  eval_quality.py  reset_db.py  seed_business_db.py  seed_mehdi_orders.py  velmo_cli.py
streamlit/: README.md  __init__.py  app_streamlit.py
tests/: conftest.py  test_agent_e2e_guardrails.py  test_agent_e2e_memory.py  test_agent_orchestrator.py  test_agent_schema.py  test_agent_tool_loop.py  test_business_generate.py  test_business_repository.py  test_business_schema.py  test_business_seed.py  test_business_tools.py  test_channels_base.py  test_cli.py  test_config.py  test_eval_guardrails.py  test_guardrails_audit.py  test_guardrails_classifier.py  test_guardrails_input.py  test_guardrails_manager.py  test_guardrails_output.py  test_guardrails_rules.py  test_guardrails_schema.py  test_memory_forget_rgpd.py  test_mlops_run_eval.py  test_observability.py  test_sms_gateway.py  test_sms_webhook.py  test_streamlit_chat.py  test_whatsapp_twilio.py  test_whatsapp_webhook.py
(+67 files in other folders)
